# xai

./: .envexample  .gitignore  QUICKSTART.md  README.md  package-lock.json  pyproject.toml  run_mcp_server.py
.claude/: OLD_PLAN.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/agents/: FORECASTER_CLASSES.md  __init__.py  base.py  discovery.py  orchestrator.py  prompts.py  research.py  synthesis.py  validation.py
backend/app/core/: config.py  logging_config.py  supabase.py
backend/app/db/: README.md  __init__.py  client.py  queries.py  repositories.py  utils.py
backend/app/manager/: __init__.py  manager.py  market_maker.py
backend/app/market/: __init__.py  client.py  models.py  orderbook.py  router.py  schemas.py  trader_profiles.py  trading.py
backend/app/noise_traders/: noise_agent.py  semantic_filter.py
backend/app/services/: grok.py
backend/app/traders/: __init__.py  fundamental_agent.py  noise_agent.py  simulation.py  user_agent.py  user_stream.py
backend/eval/: README.md  eval_results.json  eval_results_eval_results_p1-5_p2-2_p3-5_p4-1.json  eval_results_eval_results_p1-5_p2-2_p3-5_p4-1_20251207_033630.json  eval_results_eval_results_p1-5_p2-2_p3-5_p4-1_20251207_034124.json  eval_results_eval_results_p1-5_p2-2_p3-5_p4-1_20251207_034658.json  kalshi_eval_set.json  run_eval.py
backend/scripts/: run_migration.py  test_full_integration.py  test_fundamental_agent.py  test_manager_input.py  test_market_maker.py  test_mm_calibration.py  test_noise_agent.py  test_semantic_filter.py  test_user_agent.py  test_web_search.py  verify_migration.py  verify_schema.py
backend/supabase/migrations/: 001_create_tables.sql  002_add_prediction_fields.sql  003_create_trading_tables.sql  004_create_forecaster_responses.sql  004_create_order_matching_function.sql  README.md  (+1 more)
(+60 files in other folders)
