[project]
name = "grok-tool"
version = "0.1.0"
description = "GrokAI tool for retrieving topic-focused tweets with graph-aware expansion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "mcp>=0.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


